Tue Jul 30 18:59:17 1996  Tom Yu  <tlyu@mit.edu>

	* rpc.h: Don't include netdb.h (rpc/types.h already includes it)

	* svc_auth_gssapi.c: #include <rpc/rpc.h> before <sys/stat.h> (to
		get sys/types.h.

	* clnt_generic.c, clnt_simple.c, clnt_tcp.c, clnt_udp.c,
 		getrpcent.c, getrpcport.c, pmap_getmaps.c, svc_simple.c:
 		Remove #include <netdb.h>; it's already included in
 		rpc/types.h.

Mon Jul 29 22:02:47 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* configure.in: Determine whether netdb.h defines struct rpcent.

	* types.hin: Expand rpcent_define to be a null string or a #define
        on Linux.

	* netdb.h: Include rpc/types.h and only define struct rpcent if
        needed.

Wed Jul 24 07:58:38 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* pmap_rmt.c (clnt_broadcast): Use memset insetad of bzero.

	* Makefile.in (DEPLIBS): Use correct version number for
		gssapi_krb5 dependency. 

Tue Jul 23 23:49:47 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* clnt_perror.c: Don't declare strcpy.

Tue Jul 23 11:24:32 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* xdr.c: Do not declare malloc().

	* Makefile.in (SHLIB_LIBS): Link with gssapi_krb5 when creating
		shared library.


Mon Jul 22 21:46:48 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* clnt_perror.c: Include errno.h.

Fri Jul 12 15:33:50 1996  Marc Horowitz  <marc@mit.edu>

	* rpc_dtablesize.c (_rpc_dtablesize): put in a few checks to make
 	sure that the return value is never larger than FD_SETSIZE, since
 	this function's purpose is to be used as the first arg to
 	select().

Tue Jul  9 17:56:54 1996  Marc Horowitz  <marc@mit.edu>

	* rpc.h, netdb.h, getrpcent.c: Our build can (and will) require
 	that the rpc header files shipped with kerberos be used if the
 	library shipped with kerberos is used.  Thus, some simplifying
 	assumptions can be made, mostly having to do with the declaration
 	of struct rpcent and the related functions.