@@ -44,6 +44,7 @@ static char sccsid[] = "@(#)clnt_udp.c 1.39 87/08/11 Copyr 1984 Sun Micro";
 #if defined(sparc)
 #include <sys/filio.h>
 #endif
+#include <netdb.h>
 #include <errno.h>
 #include <rpc/pmap_clnt.h>
 
